--- a/HTML e CSS/responsiveSidebar/style.css
+++ b/HTML e CSS/responsiveSidebar/style.css
@@ -29,6 +29,7 @@ body {
     background: var(--body-color);
     transition: var(--tran-02);
 }
+
 body.dark{
     --body-color: #18191a;
     --sidebar-color: #242526;
@@ -47,6 +48,11 @@ body.dark{
     width: 260px;
     padding: 10px 14px;
     background-color: var(--sidebar-color);
+    transition: var(--tran-05)
+}
+
+.sidebar.close {
+    width: 97px;
 }
 
  /* ======= resuable CSS ======= */
@@ -56,8 +62,12 @@ body.dark{
     color: var(--text-color);
 }
 
+.sidebar.close .text{
+    opacity: 0;
+}
+
 .sidebar .image {
-    min-width: 60px ;
+    min-width:60px ;
     display: flex;
     align-items: center;
 }
@@ -89,8 +99,8 @@ body.dark{
 }
 
 .sidebar .image-text img{
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     border: 1px solid gray;
     border-radius: 6px;
 }
