--- a/HTML e CSS/responsiveSidebar/style.css
+++ b/HTML e CSS/responsiveSidebar/style.css
@@ -48,7 +48,8 @@ body.dark{
     width: 260px;
     padding: 10px 14px;
     background-color: var(--sidebar-color);
-    transition: var(--tran-05)
+    transition: var(--tran-05);
+    z-index: 100;
 }
 
 .sidebar.close {
@@ -60,6 +61,9 @@ body.dark{
     font-size: 16px;
     font-weight: 500;
     color: var(--text-color);
+    transition: var(--tran-04);
+    white-space: nowrap;
+    opacity: 1;
 }
 
 .sidebar.close .text{
@@ -70,6 +74,7 @@ body.dark{
     min-width:60px ;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .sidebar li {
@@ -129,8 +134,8 @@ header .image-text .header-text {
 .sidebar header .toggle {
     position: absolute;
     left: 102%;
-    top: 38px;
-    transform: translateY(-50%);
+    top: 30px;
+    transform: translateY(-50%) rotate(180deg);
     height: 25px;
     width: 25px;
     background: var(--primary-color);
@@ -141,6 +146,15 @@ header .image-text .header-text {
     border-radius: 50%;
     color: var(--sidebar-color);
     font-size: 22px;
+    transition: var(--tran-03)
+}
+
+.sidebar.close header .toggle{
+    transform: translateY(-50%);
+}
+
+body.dark .sidebar header .toggle{
+    color: var(--color-text);
 }
 
 .sidebar .search-box {
@@ -176,6 +190,11 @@ header .image-text .header-text {
     color: var(--sidebar-color);
 }
 
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text{
+    color: var(--text-color);
+}
+
 .sidebar .menu-bar {
     height: calc(100% - 95px);
     display: flex;
@@ -184,6 +203,7 @@ header .image-text .header-text {
 }
 
 .menu-bar .mode {
+    position: relative;
     background: var(--primary-color-light);
     border-radius: 10px;
 }
@@ -195,16 +215,32 @@ header .image-text .header-text {
     align-items: center;
 }
 
+.menu-bar .mode i {
+    position: absolute;
+    transition: var(--tran-03)
+}
+
 .menu-bar .mode i.sun {
     opacity: 0;
 }
 
+body.dark .menu-bar .mode i.sun {
+    opacity: 1;
+}
+
+body.dark .menu-bar .mode i.moon {
+    opacity: 0;
+}
+
 .menu-bar .mode .toggle-switch {
+    position: absolute;
+    right: 0;
     display: flex;
     align-items: center;
     justify-content:center;
-    height: 100%;
+    height: 50%;
     min-width: 60px;
+    background: var(--primary-color-light);
 }
 
 .toggle-switch .switch {
@@ -222,13 +258,34 @@ header .image-text .header-text {
     width: 15px;
     border-radius: 50%;
     top: 50%;
-    left: 50%;
+    left: 5px;
     transform: translateY(-50%);
     background: var(--sidebar-color);
     transition: var(--tran-03);
 }
 
 body.dark .switch::before{
-    left: 30px;
+    left: 25px;
+}
 
+.home {
+    position: relative;
+    left: 260px;
+    height: 100vh;
+    width: calc(100% - 260px);
+    background: var(--body-color);
+    transition: var(--tran-03);
+}
+
+.home .text {
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--text-color);
+    font-family:Arial, Helvetica, sans-serif;
+    padding: 8px 40px;
+}
+
+.sidebar.close ~ .home {
+    left: 97px;
+    width: calc(100% - 97px);
 }
